# OverTime

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
ansible/: join_member_server.yml  k8s_cluster_setup.yml  linux_updates.yml  primary_ad_setup.yml  probe_targets.yml  restart_windows_servers.yml  secondary_ad_setup.yml  set_win_hostnames.yml  setup_jumphost.yml  shutdown_linux_servers.yml  shutdown_windows_servers.yml  win_updates.yml
configs/environments/: example-azure.yml  example-proxmox.yml
overtime/: cli.py  scenarios.py
overtime/ansible/: __init__.py  configure_plan.py  inventory.py  remote_runner.py
overtime/config/: loader.py  schema.py
overtime/secrets/: base.py  manager.py
overtime/secrets/backends/: __init__.py  dotenv.py  envvars.py  onepassword.py
overtime/terraform/: __init__.py  azure_network_orchestrator.py  azure_orchestrator.py  base.py  pve_orchestrator.py  state.py
overtime/utils/: exceptions.py  logging.py  probes.py
terraform/azure/: main.tf  outputs.tf  variables.tf
terraform/azure-network/: main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
terraform/modules/azure-network/: main.tf  outputs.tf  variables.tf
terraform/proxmox/: main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
tests/: TESTING.md
tests/unit/: test_azure.py  test_azure_network.py  test_base_orchestrator.py  test_config_loader.py  test_configure.py  test_exceptions.py  test_scenarios.py  test_secrets.py  test_terraform.py
(+7 files in other folders)
